--- a/translations/es.json
+++ b/translations/es.json
@@ -16,11 +16,14 @@
   "addRelationship": "Agregar relación",
   "address": "Dirección",
   "addressPlaceholder": "Dirección física/punto de referencia",
+  "addVaccination": "Añadir Vacuna",
   "addVaccine": "Vacuna acordadora",
   "admissionDate": "Fecha de admisión",
   "admissionWard": "Sala de admisión",
   "admittingDoctor": "Doctor admitido",
+  "adverseReactionRecord": "Registro de Reacciones Adversas a Vacunas",
   "affection": "¿El niño recibe atención?",
+  "affectiveBond": "Vínculo Afectivo",
   "age": "Edad",
   "ageGroupDetails": "Detalla del Grupo de Edad",
   "ageRange": "{{min}}-{{max}} m",
@@ -34,6 +37,7 @@
   "analPermeability": "Permeabilidad",
   "analPermeabilityOther": "Otros para permeabilidad",
   "Anamnesis": "Anamnesia",
+  "anatomy": "Anatomía",
   "antecedentes": "Antecedentes",
   "Antecedentes": "Antecedentes",
   "antenatalCare": "Cuidado prenatal",
@@ -41,6 +45,9 @@
   "anthropometricsNowAvailable": "Ahora Visibles en la Página de Datos Antropométricos",
   "anthropometricsRecorded": "Datos antropométricos registrados",
   "anthropometricsSaveError": "Error Guardando Los datos Antropométricos",
+  "apgar10Min": "Apgar 10 Minutos",
+  "apgar1Min": "Apgar 1 Minuto",
+  "apgar5Min": "Apgar 5 Minutos",
   "apgarScore": "Puntuación Apgar",
   "appointmentCancelError": "Error de cancelación de cancelación",
   "appointmentCancelled": "Cita cancelada",
@@ -61,10 +68,13 @@
   "baselineStatus": "Estado del VIH",
   "biometrics_lower": "biometría",
   "birthInjuriesTrauma": "Lesiones de nacimiento/trauma",
+  "birthQuestionnaire": "Cuestionario Inmediato para Nacimiento",
   "bloodGroup": "Grupo sanguíneo",
   "bloodLoss": "Transfusión de sangre hecha",
   "bloodPressure": "Presión arterial (MMHG)",
   "bloodTransfusion": "Transfusión de sangre",
+  "bodyPosition": "Posición del Cuerpo",
+  "bodyTemperature": "Temperatura Corporal",
   "calculateBirthDate": "Calcular la fecha de nacimiento",
   "cancel": "Cancelar",
   "cancelAppointment": "Cancelar la cita",
@@ -92,6 +102,7 @@
   "clinicalStatus": "Estado clínico",
   "clinicalStatusRequired": "Se requiere un estado clínico",
   "clinicalViews": "Puntos de vista clínicos",
+  "completed": "Administrado",
   "completedCheckups": "Controla realizados",
   "condition": "Condición",
   "conditional": "Condicional",
@@ -136,6 +147,7 @@
   "dateOfOnset": "Fecha de inicio",
   "dateofstart": "Fecha de inicio",
   "dateOfSurgery": "Fecha de cirugía",
+  "dateRequired": "Debe seleccionar la fecha de ocurrencia",
   "dead": "Muerto",
   "defaulterTracing": "Rastreo de morosidad",
   "delete": "Borrar",
@@ -148,6 +160,7 @@
   "demographics": "Demografía",
   "department": "Departamento",
   "descentOfHead": "Descenso de la cabeza",
+  "descriptionRequired": "Debe ingresar una descripción de la reacción",
   "diagnoses": "Diagnósticos",
   "Diagnóstico": "Diagnóstico",
   "diastolic": "Diastólico",
@@ -195,11 +208,13 @@
   "errorLoadingConcepts": "Error de carga de conceptos de vacunación",
   "errorLoadingData": "Error de carga de datos",
   "errorLoadingPatient": "Error Cargando los datos del Paciente.",
+  "errorLoadingVaccinations": "Error al cargar el calendario de vacunación",
   "errorUpdatingCondition": "Condición de actualización de errores",
   "esophagus": "Permeabilidad esófago",
   "EstadoAdministraciónVitaminaA": "Estado de administración de vitamina a",
   "EstadoGeneral": "Estado General",
   "evolucionYMonitorizacion": "Evolución y Monitorización",
+  "examDate": "Fecha de Examen",
   "examenFísicoTórax": "Examen físico de tórax",
   "ExamenGenitalesExternos": "Examen Genitales externos",
   "examenPezon": "Examen de Pezón",
@@ -210,6 +225,7 @@
   "fatherInvolvement": "¿El padre participa en la atención?",
   "fechaYHoraAtencion": "Fecha y Hora Atención",
   "feedingOrders": "Órdenes de alimentación",
+  "feedingTime": "Tiempo que el Bebé Mamó (min)",
   "female": "Mujer",
   "fetalHeartRate": "Frecuencia cardíaca fetal",
   "field": "Campos",
@@ -235,6 +251,8 @@
   "frecuenciaCardiacaFetal": "FRECUENCIA CARDIACA FETAL (por min.)",
   "fromAge": "Desde la edad",
   "gananciaPeso": "Ganancia de Peso",
+  "gastricLavage": "Lavado Gástrico",
+  "gastricLavageCount": "Cantidad de Lavados Gástricos",
   "genderPreselected": "El género es preseleccionado en función del perfil",
   "genitourinary": "Genito Urinario",
   "genitourinaryElimination": "Eliminaciónica Genito Urinario",
@@ -259,6 +277,7 @@
   "htsTestType": "Tipo de prueba",
   "illnessDuration": "Duración de la enfermedad",
   "imc": "IMC - Índice de Masa Corporal",
+  "immediateAssessment": "Valoración Inmediata del Recién Nacido",
   "immediateEvaluation": "Evaluación",
   "immediateNewbornAttention": "Atención Inmediata del Recién Nacido",
   "immunization": "Inmunización",
@@ -273,11 +292,14 @@
   "ipvOutcome": "Resultado de IPV",
   "ipvQuestions": "Preguntas de IPV",
   "itemsPerPage": "Elementos por página",
+  "kidHistory": "Antecedentes Patologicos",
   "labourDetails": "Detalles laborales",
   "labourHistorySummary": "Detalles del Embarazo y Parto",
   "labourMetricDisplayed": "Métrica de historia laboral",
   "lastName": "Apellido",
   "lastNamePlaceholder": "Apellido",
+  "lastUpdated": "Last Updated",
+  "legend": "Leyenda",
   "lethargy": "Letargo o coma",
   "limbs": "Extremidades",
   "limbsOther": "Otros para extremidades",
@@ -301,8 +323,10 @@
   "medicalHistory": "Antecedentes médicos",
   "middleName": "Segundo nombre",
   "middleNamePlaceholder": "Segundo nombre",
+  "mild": "Leve",
   "missedAppointmentDate": "Cita fallida de fecha",
   "modeOfDelivery": "Modo de entrega",
+  "moderate": "Moderada",
   "months": "mesis",
   "motherGeneralCondition": "Condición General",
   "mouth": "Boca",
@@ -316,11 +340,13 @@
   "neckOther": "Otros para cuello",
   "neonatalAbnormalities": "Anormalidadas neonatales",
   "neonatalCounselery": "Consejeria",
+  "neonatalCounseling": "Consejeria Lactancia Materna",
   "neonatalProblems": "Problemas Neonatales",
   "neonatalSummary": "Renovación neonatal",
   "neurologicalEvaluation": "Valoracia neurológica",
   "neurologicalEvaluationOther": "Otros para valoración neurológica",
   "newbornAntropometrics": "Somatrometría",
+  "newbornEvaluations": "Evaluaciones del Recién Nacido",
   "newCredEncounter": "Creditiva de control de Nuevo",
   "next": "Siguiente",
   "nextAppointment": "Siguiente Cita",
@@ -346,14 +372,18 @@
   "nose": "Nariz",
   "noseOther": "Otros para nariz",
   "nosologicalDiagnosis": "Diagnóstico nosológico o sindrómico",
+  "notApplicable": "No aplica",
   "notes": "Notas",
   "noUpcomingAppointments": "No se encontraron citas próximas",
   "noUpcomingAppointmentsForPatient": "No hay citas próximas para mostrar para este paciente",
   "Nueva Atención Postnatal": "Nueva",
   "Nueva Atención Prenatal": "Nueva",
+  "nursingDiagnosis": "Diagnóstico de Enfermería",
   "nutritionalStatus": "Estado nutricional",
+  "observación": "Observación",
   "observation": "Observación",
   "observations": "Observaciones",
+  "occurrenceDate": "Fecha de ocurrencia",
   "onDate": "En la fecha",
   "onsetDate": "Fecha de inicio",
   "operatingDoctor": "Doctor operativo",
@@ -363,6 +393,9 @@
   "other": "Otros",
   "otherRelationships": "Otras relaciones",
   "otherSubstanceAbuse": "Otro abuso de sustancias",
+  "overdue": "Atrasada",
+  "oxygenSaturation": "Saturación de Oxígeno",
+  "oxygenSupport": "Soporte de Oxígeno",
   "pageNumber": "Número de página",
   "paginationPageText_one": "de {{count}} páginas",
   "paginationPageText_many": "de {{count}} páginas",
@@ -410,6 +443,7 @@
   "presentación": "Presentación (C/P/Na)",
   "presionDiastolica": "Presión Diastólica",
   "presionSistolica": "Presión Sistólica",
+  "presiónSistólica": "Presión sistólica",
   "prev": "Previsamente",
   "previousMonth": "Mes anterior",
   "primaryDiagnosis": "Diagnóstico primario",
@@ -420,6 +454,8 @@
   "psychomotorDevelopment": "Desarrollo psicomotor",
   "puerperioInmediato": "Puerperio en Medediato",
   "PuerperioInmediato": "Puerperio en Medediato",
+  "reactionDescription": "Descripción de la reacción",
+  "reactionPlaceholder": "Describa los síntomas observados...",
   "recommendedProcedure": "Procedimiento recomendado",
   "recordAnthropometrics": "Registrador Datos Antropométricos",
   "recordFluidBalance": "Balance de registro de líquidos",
@@ -429,6 +465,7 @@
   "reflejoOsteotendinoso": "Reflejo osteotendinoso",
   "reflexIrritability": "Refleja irritabilidad",
   "refreshing": "Refreshing...",
+  "registerReaction": "Registrar Reacción",
   "relation": "Relación",
   "relationship": "Relación",
   "relationshipConfirmationText": "Esto terminará con la relación.¿Estás seguro de que quieres continuar?",
@@ -441,6 +478,7 @@
   "required": "Requerido",
   "respiratoryEffort": "Esfuerzo respiratorio",
   "respiratoryRate": "Tasa respiratoria (RPM)",
+  "responses": "Respuestas",
   "resumenPartoPostparto": "Resumen de parto y posparto",
   "riskFactors": "Factores de riesgo",
   "RlshipError": "La solicitud falló .......",
@@ -453,6 +491,7 @@
   "saveRlship": "Salvar la relación",
   "saveSchema": "Guardar Esquema",
   "saving": "Ahorro",
+  "scheduled": "Próxima dosis",
   "scheduleVaccination": "Programar cita de vacunación",
   "searchConditions": "Condiciones de búsqueda",
   "searchHelper": "Busque y seleccione una vacuna para agregar",
@@ -462,9 +501,13 @@
   "seeAll": "Ver todo",
   "seizures": "Incursiones",
   "selectDateAndTime": "Selecciona una fecha y hora para la cita",
+  "selectSeverity": "Seleccione severidad",
   "selectVaccine": "Seleccionar vacuna",
   "selectValue": "Seleccione un valor",
   "service": "Servicio",
+  "severe": "Severa",
+  "severity": "Severidad",
+  "severityRequired": "Debe seleccionar la severidad",
   "sex": "Sexo",
   "sexualAssault": "3. ¿Él/ella te obligó a hacer algo sexual que te hizo sentir incómodo?",
   "show": "Mostrar",
@@ -472,6 +515,7 @@
   "silvermanScore": "Puntuacia de Silverman",
   "situación": "Situación (L, T, Na)",
   "skinColor": "Color de Piel",
+  "skinToSkinContact": "Contacto Piel a Piel",
   "smoking": "De fumar",
   "smokingDuration": "Duración de fumar",
   "socialHistory": "Historia social",
@@ -485,6 +529,7 @@
   "stoolGrams": "Peso de las heces (g)",
   "submit": "Guardar y cerrar",
   "successfullyDeleted": "eliminado con éxito",
+  "suction": "Succión",
   "surgicalHistory": "Historia quirúrgica",
   "surgicalSummary": "Resumen quirúrgico",
   "sutures": "Suturas",
@@ -504,12 +549,14 @@
   "therapiesPrescribed": "Terapias prescritas",
   "thorax": "Tórax",
   "threatened": "2. ¿Él/ella ha amenazado con lastimarte?",
+  "time": "Tiempo",
   "timeRecorded": "Tiempo grabado",
   "today": "Hoy",
   "tracingNumber": "Rastreo No.",
   "tracingType": "Tipo de rastreo",
   "trauma": "Trauma / quemaduras",
   "treatment": "Tratamiento",
+  "tryAgain": "Intentar de nuevo",
   "type": "Tipo",
   "typeOfSurgery": "Tipo de cirugía",
   "umbilicalCord": "Cordón umbilical",
@@ -521,6 +568,7 @@
   "upcomingCheckups": "Próximos Controles",
   "update": "Actualizar",
   "updateError": "Error de actualización",
+  "updateVaccinations": "Actualizar vacunas",
   "updating": "Actualizando ...",
   "urineCount": "Recuento de orina",
   "urineGrams": "Volumen de orina (G/ml)",
@@ -528,7 +576,10 @@
   "uterusCondition": "Condición de PPH del útero",
   "vaccinationSchedule": "Calendario de Vacunacia",
   "vaccinationScheduleBuilder": "Horario de vacunación",
+  "vaccinationTable": "Tabla de vacunaciones",
   "vaccine": "Vacuna",
+  "vaccineRequired": "Debe seleccionar una vacuna",
+  "validationError": "Error de validación",
   "validationInputError": "El Valor Debe Estar Entre {{min}} y {{max}}",
   "value": "Valor",
   "viewEncounter": "Vista (duda)",
