--- a/translations/en.json
+++ b/translations/en.json
@@ -16,11 +16,14 @@
   "addRelationship": "Add relationship",
   "address": "Address",
   "addressPlaceholder": "Physical Address/Landmark",
+  "addVaccination": "Añadir Vacuna",
   "addVaccine": "Add vaccine",
   "admissionDate": "Admission Date",
   "admissionWard": "Admission Ward",
   "admittingDoctor": "Admitting Doctor",
+  "adverseReactionRecord": "Registro de Reacciones Adversas a Vacunas",
   "affection": "Does the child receive affection?",
+  "affectiveBond": "Vínculo Afectivo",
   "age": "Age",
   "ageGroupDetails": "Age group details",
   "ageRange": "Age range",
@@ -34,6 +37,7 @@
   "analPermeability": "Anal Permeability",
   "analPermeabilityOther": "Other for anal permeability",
   "Anamnesis": "Anamnesis",
+  "anatomy": "Anatomía",
   "antecedentes": "Medical History",
   "Antecedentes": "Antecedentes",
   "antenatalCare": "Prenatal Care",
@@ -41,6 +45,9 @@
   "anthropometricsNowAvailable": "Visible in Anthropometric Measurements page",
   "anthropometricsRecorded": "Anthropometric Data Recorded",
   "anthropometricsSaveError": "Error saving anthropometric data",
+  "apgar10Min": "Apgar 10 Minutos",
+  "apgar1Min": "Apgar 1 Minuto",
+  "apgar5Min": "Apgar 5 Minutos",
   "apgarScore": "APGAR Score",
   "appointmentCancelError": "Error cancelling appointment",
   "appointmentCancelled": "Appointment cancelled",
@@ -61,10 +68,13 @@
   "baselineStatus": "HIV Status",
   "biometrics_lower": "biometrics",
   "birthInjuriesTrauma": "Birth Injuries/Trauma",
+  "birthQuestionnaire": "Cuestionario Inmediato para Nacimiento",
   "bloodGroup": "Blood Group",
   "bloodLoss": "Blood Transfusion Done",
   "bloodPressure": "Blood Pressure (mmHg)",
   "bloodTransfusion": "Blood Transfusion",
+  "bodyPosition": "Posición del Cuerpo",
+  "bodyTemperature": "Temperatura Corporal",
   "calculateBirthDate": "Calculate birth date",
   "cancel": "Cancel",
   "cancelAppointment": "Cancel appointment",
@@ -92,6 +102,7 @@
   "clinicalStatus": "Clinical status",
   "clinicalStatusRequired": "A clinical status is required",
   "clinicalViews": "Clinical views",
+  "completed": "Administrado",
   "completedCheckups": "Checkups Completed",
   "condition": "Condition",
   "conditional": "Conditional",
@@ -136,6 +147,7 @@
   "dateOfOnset": "Date of onset",
   "dateofstart": "Start Date",
   "dateOfSurgery": "Date of Surgery",
+  "dateRequired": "Debe seleccionar la fecha de ocurrencia",
   "dead": "Dead",
   "defaulterTracing": "Defaulter tracing",
   "delete": "Delete",
@@ -148,6 +160,7 @@
   "demographics": "Demographics",
   "department": "Department",
   "descentOfHead": "Descent of Head",
+  "descriptionRequired": "Debe ingresar una descripción de la reacción",
   "diagnoses": "Diagnosis",
   "Diagnóstico": "Diagnosis",
   "diastolic": "Diastolic",
@@ -195,11 +208,13 @@
   "errorLoadingConcepts": "Error loading vaccination concepts",
   "errorLoadingData": "Error loading data",
   "errorLoadingPatient": "Error Loading Patient Data",
+  "errorLoadingVaccinations": "Error al cargar el calendario de vacunación",
   "errorUpdatingCondition": "Error updating condition",
   "esophagus": "Esophageal Patency",
   "EstadoAdministraciónVitaminaA": "Vitamin A Administration Status",
   "EstadoGeneral": "General Condition",
   "evolucionYMonitorizacion": "Progress and Monitoring",
+  "examDate": "Fecha de Examen",
   "examenFísicoTórax": "Chest Physical Examination",
   "ExamenGenitalesExternos": "External Genital Examination",
   "examenPezon": "Nipple Examination",
@@ -210,6 +225,7 @@
   "fatherInvolvement": "Does the father participate in care?",
   "fechaYHoraAtencion": "Date and Time of the Appointment",
   "feedingOrders": "Feeding Orders",
+  "feedingTime": "Tiempo que el Bebé Mamó (min)",
   "female": "Female",
   "fetalHeartRate": "Fetal Heart Rate",
   "field": "Field",
@@ -235,6 +251,8 @@
   "frecuenciaCardiacaFetal": "Fetal Heart Rate (per min.)",
   "fromAge": "From Age",
   "gananciaPeso": "Weight Gain",
+  "gastricLavage": "Lavado Gástrico",
+  "gastricLavageCount": "Cantidad de Lavados Gástricos",
   "genderPreselected": "Gender is pre-selected based on the profile",
   "genitourinary": "Genitourinary",
   "genitourinaryElimination": "Genitourinary",
@@ -259,6 +277,7 @@
   "htsTestType": "Test type",
   "illnessDuration": "Duration of Illness",
   "imc": "Body mass index (BMI)",
+  "immediateAssessment": "Valoración Inmediata del Recién Nacido",
   "immediateEvaluation": "Immediate evolution",
   "immediateNewbornAttention": "Immediate newborn attention",
   "immunization": "Immunization",
@@ -273,11 +292,14 @@
   "ipvOutcome": "IPV Outcome",
   "ipvQuestions": "IPV Questions",
   "itemsPerPage": "Items per page",
+  "kidHistory": "Antecedentes Patologicos",
   "labourDetails": "Labour Details",
   "labourHistorySummary": "Summary of labour history",
   "labourMetricDisplayed": "Labour History Metric",
   "lastName": "Last name",
   "lastNamePlaceholder": "Last name",
+  "lastUpdated": "Última Actualización",
+  "legend": "Leyenda",
   "lethargy": "Lethargy or coma",
   "limbs": "Limbs",
   "limbsOther": "Other fro limbs",
@@ -301,8 +323,10 @@
   "medicalHistory": "Medical History",
   "middleName": "Middle name",
   "middleNamePlaceholder": "Middle name",
+  "mild": "Leve",
   "missedAppointmentDate": "Date Missed Appointment",
   "modeOfDelivery": "Mode of Delivery",
+  "moderate": "Moderada",
   "months": "months",
   "motherGeneralCondition": "General condition",
   "mouth": "Mouth",
@@ -316,11 +340,13 @@
   "neckOther": "Other for neck",
   "neonatalAbnormalities": "Neonatal Abnormalities",
   "neonatalCounselery": "Neonatal Counselery",
+  "neonatalCounseling": "Consejeria Lactancia Materna",
   "neonatalProblems": "Neonatal Problems",
   "neonatalSummary": "Neonatal Summary",
   "neurologicalEvaluation": "Neurological Evaluation ",
   "neurologicalEvaluationOther": "Other for Neurological Evaluation",
   "newbornAntropometrics": "Newborn Antropometrics",
+  "newbornEvaluations": "Evaluaciones del Recién Nacido",
   "newCredEncounter": "New CRED Encounter",
   "next": "Next",
   "nextAppointment": "Next Appointment",
@@ -346,14 +372,18 @@
   "nose": "nose",
   "noseOther": "Other for nose",
   "nosologicalDiagnosis": "Nosological or Syndromic Diagnosis",
+  "notApplicable": "No aplica",
   "notes": "Notes",
   "noUpcomingAppointments": "No upcoming appointments found",
   "noUpcomingAppointmentsForPatient": "There are no upcoming appointments to display for this patient",
   "Nueva Atención Postnatal": "New Postnatal Care",
   "Nueva Atención Prenatal": "New Prenatal Care",
+  "nursingDiagnosis": "Diagnóstico de Enfermería",
   "nutritionalStatus": "Nutritional Status",
+  "observación": "Observación",
   "observation": "Observation",
   "observations": "Observations",
+  "occurrenceDate": "Fecha de ocurrencia",
   "onDate": "On Date",
   "onsetDate": "Onset date",
   "operatingDoctor": "Operating Doctor",
@@ -363,6 +393,9 @@
   "other": "Other",
   "otherRelationships": "Other Relationships",
   "otherSubstanceAbuse": "Other Substance Abuse",
+  "overdue": "Atrasada",
+  "oxygenSaturation": "Saturación de Oxígeno",
+  "oxygenSupport": "Soporte de Oxígeno",
   "pageNumber": "Page number",
   "paginationPageText_one": "of {{count}} pages",
   "paginationPageText_other": "of {{count}} pages",
@@ -409,6 +442,7 @@
   "presentación": "Presentation (C/P/NA)",
   "presionDiastolica": "Diastolic Pressure",
   "presionSistolica": "Systolic Pressure",
+  "presiónSistólica": "Presión Sistólica",
   "prev": "Prev",
   "previousMonth": "Previous month",
   "primaryDiagnosis": "Primary Diagnosis",
@@ -419,6 +453,8 @@
   "psychomotorDevelopment": "Psychomotor Development",
   "puerperioInmediato": "Immediate Puerperium",
   "PuerperioInmediato": "Immediate Puerperium",
+  "reactionDescription": "Descripción de la reacción",
+  "reactionPlaceholder": "Describa los síntomas observados...",
   "recommendedProcedure": "Recommended Procedure",
   "recordAnthropometrics": "Record Anthropometris",
   "recordFluidBalance": "Record fluid banlace",
@@ -428,6 +464,7 @@
   "reflejoOsteotendinoso": "Deep tendon reflex",
   "reflexIrritability": "Reflex irritability",
   "refreshing": "Refreshing...",
+  "registerReaction": "Registrar Reacción",
   "relation": "Relation",
   "relationship": "Relationship",
   "relationshipConfirmationText": "This will end the relationship. Are you sure you want to proceed?",
@@ -440,6 +477,7 @@
   "required": "Required",
   "respiratoryEffort": "Respiratory Effort",
   "respiratoryRate": "Respiratory Rate (rpm)",
+  "responses": "Respuestas",
   "resumenPartoPostparto": "Labor and Postpartum Summary",
   "riskFactors": "Risk Factors",
   "RlshipError": "Request Failed.......",
@@ -452,6 +490,7 @@
   "saveRlship": "Save Relationship",
   "saveSchema": "Save schema",
   "saving": "Saving",
+  "scheduled": "Próxima dosis",
   "scheduleVaccination": "Schedule Vaccination",
   "searchConditions": "Search conditions",
   "searchHelper": "Search and select a vaccine to add",
@@ -461,9 +500,13 @@
   "seeAll": "See all",
   "seizures": "Seizures",
   "selectDateAndTime": "Select date and time",
+  "selectSeverity": "Seleccione severidad",
   "selectVaccine": "Select Vaccine",
   "selectValue": "Select value",
   "service": "Service",
+  "severe": "Severa",
+  "severity": "Severidad",
+  "severityRequired": "Debe seleccionar la severidad",
   "sex": "Sex",
   "sexualAssault": "3.Has he/she ever forced you to do something sexually that made you feel uncomfortable?",
   "show": "Show",
@@ -471,6 +514,7 @@
   "silvermanScore": "Silverman score",
   "situación": "Situation (L,T,NA)",
   "skinColor": "Skin color",
+  "skinToSkinContact": "Contacto Piel a Piel",
   "smoking": "Smoking",
   "smokingDuration": "Smoking Duration",
   "socialHistory": "Social History",
@@ -484,6 +528,7 @@
   "stoolGrams": "Stool Weight (g)",
   "submit": "Save and Close",
   "successfullyDeleted": "successfully deleted",
+  "suction": "Succión",
   "surgicalHistory": "Surgical History",
   "surgicalSummary": "Surgical Summary",
   "sutures": "Sutures",
@@ -503,12 +548,14 @@
   "therapiesPrescribed": "Therapies Prescribed",
   "thorax": "thorax",
   "threatened": "2. Has he/she ever threatened to hurt you?",
+  "time": "Tiempo",
   "timeRecorded": "Time Recorded",
   "today": "Today",
   "tracingNumber": "Tracing No.",
   "tracingType": "Tracing Type",
   "trauma": "Trauma / Burns",
   "treatment": "Treatment",
+  "tryAgain": "Intentar de nuevo",
   "type": "Type",
   "typeOfSurgery": "Type of Surgery",
   "umbilicalCord": " Umbilical cord",
@@ -520,6 +567,7 @@
   "upcomingCheckups": "Upcoming checkups",
   "update": "update",
   "updateError": "Error updating upcoming appointment",
+  "updateVaccinations": "Actualizar vacunas",
   "updating": "Updating...",
   "urineCount": "Urine Count",
   "urineGrams": "Urine Volume (g/mL)",
@@ -527,7 +575,10 @@
   "uterusCondition": "PPH Condition of uterus",
   "vaccinationSchedule": "Vaccination Schedule",
   "vaccinationScheduleBuilder": "Vaccination Schedule Builder",
+  "vaccinationTable": "Tabla de vacunaciones",
   "vaccine": "vaccine",
+  "vaccineRequired": "Debe seleccionar una vacuna",
+  "validationError": "Error de validación",
   "validationInputError": "The value must be between {{min}} and {{max}}",
   "value": "Value",
   "viewEncounter": "View",
