(pending to fix)

--- a/translations/en.json
+++ b/translations/en.json
@@ -128,6 +128,8 @@
   "controlPuerperio": "Postpartum Checkups",
   "cordClamping": "Cord Clamping",
   "createPatient": "Create patient",
+  "credAgeGroups": "Control Según Edad",
+  "credCheckups": "Controles CRED",
   "credSchedule": " CRED Schedule",
   "Cuidado prenatal": "Prenatal Care",
   "Current pregnancy": "Current pregnancy",
