--- a/translations/es.json
+++ b/translations/es.json
@@ -128,6 +128,8 @@
   "controlPuerperio": "Control Puerperio",
   "cordClamping": "Clampeo del Cordón",
   "createPatient": "Crear paciente",
+  "credAgeGroups": "Control Según Edad",
+  "credCheckups": "Controles CRED",
   "credSchedule": "Seguimiento Cred",
   "Cuidado prenatal": "Cuidado prenatal",
   "Current pregnancy": "Embarazón real",
@@ -574,7 +576,7 @@
   "urineGrams": "Volumen de orina (G/ml)",
   "uterineHeight": "Altura uterina (CM)",
   "uterusCondition": "Condición de PPH del útero",
-  "vaccinationSchedule": "Calendario de Vacunacia",
+  "vaccinationSchedule": "Calendario de Vacunación",
   "vaccinationScheduleBuilder": "Horario de vacunación",
   "vaccinationTable": "Tabla de vacunaciones",
   "vaccine": "Vacuna",
