fix: corregir traducciones en español para mayor claridad y precisión

--- a/translations/es.json
+++ b/translations/es.json
@@ -484,7 +484,7 @@
   "resumenPartoPostparto": "Resumen de parto y posparto",
   "riskFactors": "Factores de riesgo",
   "RlshipError": "La solicitud falló .......",
-  "save": "Ahorrar",
+  "save": "Guardar",
   "saveAndClose": "Guardar y cerrar",
   "savedRelationship": "La relación terminó con éxito",
   "savedRlship": "Relación guardada con éxito",
