fix: corregir traducción de "actions" en el archivo de traducciones al español

--- a/translations/es.json
+++ b/translations/es.json
@@ -4,7 +4,7 @@
   "abnormalValue": "Valor anormal",
   "accidentOrTrauma": "Accidente o trauma",
   "action": "Acción",
-  "actions": "Comportamiento",
+  "actions": "Acciones",
   "active": "Activo",
   "activeCases": "Casos activos",
   "add": "Agregar",
