refactor: renombrar 'immediatePostpartumTable' a 'immediatePostpartum' y actualizar identificadores en componentes y traducciones

--- a/translations/en.json
+++ b/translations/en.json
@@ -183,6 +183,7 @@
   "headCircumference": "Head Circumference (cm)",
   "heartRate": "Heart Rate (bpm)",
   "height": "Height (cm)",
+  "heridaOperatoria": "Herida Operatoria",
   "hip": "Cadera",
   "hivStatus": "HIV Status",
   "htsClinicalView": "HTS Clinical View",
@@ -218,6 +219,7 @@
   "loadingEncounters": "Loading encounters...",
   "loadingPatient": "Loding Patient...",
   "location": "Location",
+  "lochiaCharacteristics": "Característica de Loquios",
   "manageVaccinationSchedule": "Manage Schedule",
   "maternalCondition": "Maternal Condition",
   "maternalHistory": "Antecedentes Maternos",
@@ -316,6 +318,7 @@
   "priorityOfAdmission": "Priority Of Admission",
   "proteinuriaGestacional": "Gestational Proteinuria",
   "proximaCita": "Next Appointment",
+  "puerperioInmediato": "Puerperio Inmediato",
   "reactionDescription": "Descripción de la reacción",
   "reactionPlaceholder": "Describa los síntomas observados...",
   "recommendedProcedure": "Recommended Procedure",
@@ -397,6 +400,7 @@
   "updateError": "Error updating upcoming appointment",
   "updateVaccinations": "Actualizar vacunas",
   "uterineHeight": "Uterine Height (cm)",
+  "uterineInvolution": "Involución Uterina",
   "vaccinationSchedule": "Vaccination Schedule",
   "vaccinationScheduleBuilder": "Vaccination Schedule Builder",
   "vaccinationTable": "Tabla de vacunaciones",
