--- a/translations/es.json
+++ b/translations/es.json
@@ -183,6 +183,7 @@
   "headCircumference": "Perímetro cefálico",
   "heartRate": "Frecuencia cardíaca",
   "height": "Altura",
+  "heridaOperatoria": "Herida Operatoria",
   "hip": "Cadera",
   "hivStatus": "Estado del VIH",
   "htsClinicalView": "Vista clínica de HTS",
@@ -218,6 +219,7 @@
   "loadingEncounters": "Cargando encuentros ...",
   "loadingPatient": "Cargando paciente ...",
   "location": "Ubicación",
+  "lochiaCharacteristics": "Característica de Loquios",
   "manageVaccinationSchedule": "Administrar calendario de vacunación",
   "maternalCondition": "Condición materna",
   "maternalHistory": "Antecedentes maternos",
@@ -317,6 +319,7 @@
   "priorityOfAdmission": "Prioridad de admisión",
   "proteinuriaGestacional": "Proteinuria gestacional",
   "proximaCita": "Próxima Cita",
+  "puerperioInmediato": "Puerperio Inmediato",
   "reactionDescription": "Descripción de la reacción",
   "reactionPlaceholder": "Describa los síntomas observados...",
   "recommendedProcedure": "Procedimiento recomendado",
@@ -398,6 +401,7 @@
   "updateError": "Error de actualización",
   "updateVaccinations": "Actualizar vacunaciones",
   "uterineHeight": "Altura uterina (cm)",
+  "uterineInvolution": "Involución Uterina",
   "vaccinationSchedule": "Calendario de vacunación",
   "vaccinationScheduleBuilder": "Gestor del calendario de vacunación",
   "vaccinationTable": "Tabla de vacunaciones",
