feat: mejorar la traducción y la gestión de títulos en componentes de FUA, optimizar dependencias y agregar funciones de fecha

--- a/translations/en.json
+++ b/translations/en.json
@@ -10,6 +10,7 @@
   "add": "Add",
   "addCase": "Add case",
   "addData": "Add data",
+  "additionalServices": "Pediatría y Servicios Adicionales",
   "addPNSContact": "Add PNS Contact",
   "addRelationship": "Add relationship",
   "addVaccination": "Añadir Vacuna",
@@ -18,6 +19,7 @@
   "admissionWard": "Admission Ward",
   "admittingDoctor": "Admitting Doctor",
   "adverseReactionRecord": "Registro de Reacciones Adversas a Vacunas",
+  "adverseReactions": "Reacciones Adversas",
   "affectiveBond": "Vínculo Afectivo",
   "age": "Age",
   "ageGroupDetails": "Age group details",
@@ -55,6 +57,7 @@
   "bloodTransfusion": "Blood Transfusion",
   "bodyPosition": "Posición del Cuerpo",
   "bodyTemperature": "Temperatura Corporal",
+  "breastfeedingCounseling": "Consejeria de Lactancia Materna",
   "cancel": "Cancel",
   "caseEncounter": "Case management encounters",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
@@ -62,11 +65,13 @@
   "caseManager": "Case Manager",
   "category": "Category",
   "causeOfDeath": "Cause of Death",
+  "cephalocaudalEvaluation": "Evaluación Cefalocaudal",
   "cephaloCaudalNeurologicalEvaluation": "Cephalocaudal and Neurological Evaluation of the Newborn",
   "cervicalDilation": "Cervical Dilation cm",
   "chartView": "Chart View",
   "checkFilters": "Check the filters above",
   "chestCircumference": "Chest Circumference",
+  "childImmunizationSchedule": "Esquema de Vacunación Infantil",
   "chronicDisease": "Chronic Disease",
   "clavicle": "Clavicle",
   "clientEligibility": "Eligible",
@@ -89,8 +94,10 @@
   "createPatient": "Create patient",
   "credAgeGroups": "Control Según Edad",
   "credCheckups": "Controles CRED",
+  "credControls": "Controles CRED",
   "Cuidado prenatal": "Prenatal Care",
   "Current pregnancy": "Current pregnancy",
+  "currentPregnancy": "Embarazo Actual",
   "customViews": "In this section, you'll find custom clinical views tailored to patients' conditions and enrolled care programs.",
   "dataDisplayed": "Data displayed",
   "dataTable": "Data table",
@@ -166,6 +173,7 @@
   "finalOutcome": "Final Outcome",
   "FirmaYSello": "Signature and Stamp",
   "foetalPresentation": "Foetal Presentation",
+  "following": "Seguimiento",
   "followUpDate": "Follow Up Date",
   "fontanelle": "Fontanelle",
   "fontanelleOther": "Other (Fontanelle)",
@@ -193,9 +201,12 @@
   "htsTestType": "Test type",
   "imc": "Body mass index (BMI)",
   "immediateAssessment": "Valoración Inmediata del Recién Nacido",
+  "immediateAttention": "Atención Inmediata",
   "immediateNewbornAttention": "Immediate newborn attention",
+  "immediatePostpartum": "Puerperio Inmediato",
   "immunization": "Immunization",
   "immunizationPlanBuilder": "Immunization Plan Management",
+  "immunizationTabs": "Pestañas de Inmunización",
   "inactive": "Inactive",
   "inactiveCases": "Inactive Cases",
   "indicacionAcidoFolico": "Folic acid prescription",
@@ -205,6 +216,8 @@
   "ipvOutcome": "IPV Outcome",
   "itemsPerPage": "Items per page",
   "kidHistory": "Antecedentes Patologicos",
+  "labourAndDelivery": "Parto y Puerperio",
+  "labourAndDeliveryTabs": "Pestañas de Parto y Puerperio",
   "labourDetails": "Labour Details",
   "labourHistorySummary": "Summary of labour history",
   "labourMetricDisplayed": "Labour History Metric",
@@ -241,6 +254,8 @@
   "neck": "Neck",
   "neckOther": "Other for neck",
   "neonatalAbnormalities": "Neonatal Abnormalities",
+  "neonatalCare": "Historia Neonatal",
+  "neonatalCareTabs": "Pestañas de Atención Neonatal",
   "neonatalCounseling": "Consejeria Lactancia Materna",
   "neonatalProblems": "Neonatal Problems",
   "neonatalSummary": "Neonatal Summary",
@@ -248,6 +263,7 @@
   "neurologicalEvaluationOther": "Other for Neurological Evaluation",
   "newbornAntropometrics": "Newborn Antropometrics",
   "newbornEvaluation": "Evaluation of the newborn",
+  "newbornVitals": "Signos Vitales del Recién Nacido",
   "newCredEncounter": "New CRED Encounter",
   "next": "Next",
   "nextMonth": "Next month",
@@ -261,6 +277,7 @@
   "noEncounterToDisplay": "There are no encounters to display for this patient.",
   "noFamilyHistoryData": "There is no family history data to display for this patient.",
   "noLegendItems": "No hay elementos de leyenda disponibles",
+  "nonCredControls": "Controles NO CRED",
   "noObservationsFound": "No observations found",
   "noPastAppointments": "There are no past appointments to display for this patient",
   "noResultsFor": "No results for",
@@ -298,6 +315,7 @@
   "patientFamilyTable": "Patient family table",
   "pending": "Pending",
   "perfilBiofisico": "Biophysical Profile",
+  "perinatalRecord": "Registro Perinatal",
   "pesoCorporal": "Body Weight (kg)",
   "pesoMadre": "Maternal Weight (kg)",
   "PielYMucosas": "Skin and Mucosa",
@@ -306,9 +324,15 @@
   "pnsAproach": "PNS Aproach",
   "populationType": "Population type",
   "posición": "Position (O/I/NA)",
+  "postnatalCare": "Control Postnatal",
+  "postnatalCareTabs": "Pestañas de Control Postnatal",
+  "postnatalControls": "Control del Puerperio",
   "postOperativeComplications": "Post Operative Complications",
   "postOperativeDiagnosis": "Post Operative Diagnosis",
   "prenatalAntecedents": " Prenatal History",
+  "prenatalCare": "Control Prenatal",
+  "prenatalCareChart": "Control Prenatal",
+  "prenatalCareTabs": "Pestañas de Control Prenatal",
   "presentación": "Presentation (C/P/NA)",
   "presionDiastolica": "Diastolic Pressure",
   "presionSistolica": "Systolic Pressure",
@@ -367,6 +391,7 @@
   "statusAtDischarge": "Status at Discharge",
   "successfullyDeleted": "successfully deleted",
   "suction": "Succión",
+  "summaryOfLaborAndPostpartum": "Resumen del Parto y Puerperio",
   "surgicalHistory": "Surgical History",
   "surgicalSummary": "Surgical Summary",
   "sutures": "Sutures",
@@ -414,5 +439,7 @@
   "visitaDomiciliaria": "Home visit",
   "visitDate": "Screening Date",
   "vitaminKAdmin": "Vitamin K administration",
-  "weight": "Weight (kg)"
+  "weight": "Weight (kg)",
+  "wellChildCare": "Control de Niño Sano",
+  "wellChildCareTabs": "Pestañas de Control de Niño Sano"
 }
