--- a/translations/es.json
+++ b/translations/es.json
@@ -10,6 +10,7 @@
   "add": "Agregar",
   "addCase": "Agregar caso",
   "addData": "Agregar datos",
+  "additionalServices": "Pediatría y Servicios Adicionales",
   "addPNSContact": "Agregar contacto de pareja",
   "addRelationship": "Agregar relación",
   "addVaccination": "Agregar vacunación",
@@ -18,6 +19,7 @@
   "admissionWard": "Sala de admisión",
   "admittingDoctor": "Médico responsable de la admisión",
   "adverseReactionRecord": "Registro de reacciones adversas",
+  "adverseReactions": "Reacciones Adversas",
   "affectiveBond": "Vínculo afectivo",
   "age": "Edad",
   "ageGroupDetails": "Detalles del grupo de edad",
@@ -55,6 +57,7 @@
   "bloodTransfusion": "Transfusión de sangre",
   "bodyPosition": "Posición corporal",
   "bodyTemperature": "Temperatura corporal",
+  "breastfeedingCounseling": "Consejeria de Lactancia Materna",
   "cancel": "Cancelar",
   "caseEncounter": "Encuentros de gestión de casos",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
@@ -62,11 +65,13 @@
   "caseManager": "Gestor de casos",
   "category": "Categoría",
   "causeOfDeath": "Causa de muerte",
+  "cephalocaudalEvaluation": "Evaluación Cefalocaudal",
   "cephaloCaudalNeurologicalEvaluation": "Evaluación céfalocaudal y neurológica del recién nacido",
   "cervicalDilation": "Dilación cervical (cm)",
   "chartView": "Vista de la tabla",
   "checkFilters": "Verifique los filtros seleccionados",
   "chestCircumference": "Perímetro torácico",
+  "childImmunizationSchedule": "Esquema de Vacunación Infantil",
   "chronicDisease": "Enfermedad crónica",
   "clavicle": "Clavícula",
   "clientEligibility": "Elegibilidad del paciente",
@@ -89,8 +94,10 @@
   "createPatient": "Crear paciente",
   "credAgeGroups": "Control CRED según edad",
   "credCheckups": "Controles CRED",
+  "credControls": "Controles CRED",
   "Cuidado prenatal": "Cuidado prenatal",
   "Current pregnancy": "Embarazo actual",
+  "currentPregnancy": "Embarazo Actual",
   "customViews": "En esta sección, encontrará vistas clínicas personalizadas adaptadas a las condiciones de los pacientes y los programas de atención inscrita.",
   "dataDisplayed": "Datos mostrados",
   "dataTable": "Tabla de datos",
@@ -166,6 +173,7 @@
   "finalOutcome": "Resultado final",
   "FirmaYSello": "Firma y sello",
   "foetalPresentation": "Presentación fetal",
+  "following": "Seguimiento",
   "followUpDate": "Fecha de seguimiento",
   "fontanelle": "Fontanela",
   "fontanelleOther": "Otras observaciones sobre fontanela",
@@ -193,9 +201,12 @@
   "htsTestType": "Tipo de prueba de detección de VIH",
   "imc": "IMC - Índice de Masa Corporal",
   "immediateAssessment": "Valoración inmediata del recién nacido",
+  "immediateAttention": "Atención Inmediata",
   "immediateNewbornAttention": "Atención inmediata del recién nacido",
+  "immediatePostpartum": "Puerperio Inmediato",
   "immunization": "Inmunización",
   "immunizationPlanBuilder": "Gestión del plan de inmunización",
+  "immunizationTabs": "Pestañas de Inmunización",
   "inactive": "Inactivo",
   "inactiveCases": "Casos inactivos",
   "indicacionAcidoFolico": "Indicación de ácido fólico",
@@ -205,6 +216,8 @@
   "ipvOutcome": "Resultado de evaluación IPV",
   "itemsPerPage": "Elementos por página",
   "kidHistory": "Antecedentes patológicos",
+  "labourAndDelivery": "Parto y Puerperio",
+  "labourAndDeliveryTabs": "Pestañas de Parto y Puerperio",
   "labourDetails": "Detalles del trabajo de parto",
   "labourHistorySummary": "Resumen del embarazo y parto",
   "labourMetricDisplayed": "Métricas del trabajo de parto mostradas",
@@ -241,6 +254,8 @@
   "neck": "Cuello",
   "neckOther": "Otras observaciones sobre el cuello",
   "neonatalAbnormalities": "Anormalidades neonatales",
+  "neonatalCare": "Historia Neonatal",
+  "neonatalCareTabs": "Pestañas de Atención Neonatal",
   "neonatalCounseling": "Consejeria sobre lactancia materna",
   "neonatalProblems": "Problemas neonatales",
   "neonatalSummary": "Resumen neonatal",
@@ -248,6 +263,7 @@
   "neurologicalEvaluationOther": "Otras observaciones sobre la valoración neurológica",
   "newbornAntropometrics": "Antropometría del recién nacido",
   "newbornEvaluation": "Evaluación del Recién Nacido",
+  "newbornVitals": "Signos Vitales del Recién Nacido",
   "newCredEncounter": "Nuevo control CRED",
   "next": "Siguiente",
   "nextMonth": "Siguiente mes",
@@ -261,6 +277,7 @@
   "noEncounterToDisplay": "No hay encuentros que mostrar para este paciente.",
   "noFamilyHistoryData": "No hay antecedentes familiares registrados para este paciente.",
   "noLegendItems": "No hay elementos de leyenda disponibles",
+  "nonCredControls": "Controles NO CRED",
   "noObservationsFound": "No se encontraron observaciones",
   "noPastAppointments": "No hay citas previas registradas para este paciente.",
   "noResultsFor": "No hay resultados para esta búsqueda",
@@ -285,9 +302,9 @@
   "oxygenSaturation": "Saturación de oxígeno",
   "oxygenSupport": "Soporte respiratorio con oxígeno",
   "pageNumber": "Número de página",
-  "paginationPageText_one": "de {{count}} páginas",
-  "paginationPageText_many": "de {{count}} páginas",
-  "paginationPageText_other": "de {{count}} páginas",
+  "paginationPageText_one": "of {{count}} pages",
+  "paginationPageText_many": "of {{count}} pages",
+  "paginationPageText_other": "of {{count}} pages",
   "partoAborto": "Abortos",
   "partoAlTermino": "Partos a término",
   "partograph": "Partograma",
@@ -299,6 +316,7 @@
   "patientFamilyTable": "Tabla de contactos familiares",
   "pending": "Pendiente",
   "perfilBiofisico": "Perfil biofísico",
+  "perinatalRecord": "Registro Perinatal",
   "pesoCorporal": "Peso corporal (kg)",
   "pesoMadre": "Peso madre (kg)",
   "PielYMucosas": "Piel y mucosas",
@@ -307,9 +325,15 @@
   "pnsAproach": "Enfoque de notificación de parejas (PNS)",
   "populationType": "Tipo de población",
   "posición": "Posición (O/I/Na)",
+  "postnatalCare": "Control Postnatal",
+  "postnatalCareTabs": "Pestañas de Control Postnatal",
+  "postnatalControls": "Control del Puerperio",
   "postOperativeComplications": "Complicaciones postoperatorias",
   "postOperativeDiagnosis": "Diagnóstico postoperatorio",
   "prenatalAntecedents": "Antecedentes prenatales",
+  "prenatalCare": "Control Prenatal",
+  "prenatalCareChart": "Control Prenatal",
+  "prenatalCareTabs": "Pestañas de Control Prenatal",
   "presentación": "Presentación (C/P/Na)",
   "presionDiastolica": "Presión diastólica",
   "presionSistolica": "Presión sistólica",
@@ -368,6 +392,7 @@
   "statusAtDischarge": "Estado al alta",
   "successfullyDeleted": "Eliminado con éxito",
   "suction": "Succión",
+  "summaryOfLaborAndPostpartum": "Resumen del Parto y Puerperio",
   "surgicalHistory": "Historia quirúrgica",
   "surgicalSummary": "Resumen quirúrgico",
   "sutures": "Suturas",
@@ -415,5 +440,7 @@
   "visitaDomiciliaria": "Visita domiciliaria",
   "visitDate": "Fecha de visita",
   "vitaminKAdmin": "Administración de vitamina K",
-  "weight": "Peso"
+  "weight": "Peso",
+  "wellChildCare": "Control de Niño Sano",
+  "wellChildCareTabs": "Pestañas de Control de Niño Sano"
 }
