feat: actualizar traducciones en español para mejorar la consistencia y claridad del texto

--- a/translations/es.json
+++ b/translations/es.json
@@ -350,7 +350,7 @@
   "recordLabourDetails": "Registrar detalles del trabajo de parto",
   "referrals": "Referencias",
   "reflejoOsteotendinoso": "Reflejo osteotendinoso",
-  "refreshing": "Actualizando...",
+  "refreshing": "Refrescando...",
   "registerReaction": "Registrar reacción",
   "relation": "Relación",
   "relationshipConfirmationText": "Esto terminará con la relación.¿Estás seguro de que quieres continuar?",
@@ -370,7 +370,7 @@
   "searchHelper": "Busque y seleccione una vacuna para agregar",
   "searching": "Buscando...",
   "searchVaccine": "Buscar vacuna",
-  "seeAll": "Ver todo",
+  "seeAll": "Ver Todo",
   "selectSeverity": "Seleccione la severidad",
   "selectVaccine": "Seleccione vacuna",
   "service": "Servicio",
